# stm32-cli

./: CMakeLists.txt  README.md
Inc/: cli.h
Preset/: cmd_list.h
Src/: cli.c
